--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,11 @@
     transform: rotate(360deg);
   }
 } */
+
+.App {
+  height: 100%;
+  display: grid;
+  grid-template:
+    "nav" auto
+    "main" 1fr;
+}
